objects/ccrz__E_Subscription__c.object
<CustomObject>
    <description>This is a subscription, the record of purchased subscription</description>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account associated with this subscription.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this subscription automatically renews</description>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to original order item used to create this subscription.</description>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to original order used to create this subscription.</description>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>Any comments to note about this subscription</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CurrencyISOCode__c</fullName>
        <description>The B2B Commerce currency for this transaction.</description>
        <label>Currency ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveAccountID__c</fullName>
        <description>Holds the effective account for this Subscription. This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own. The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</description>
        <inlineHelpText>This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own. The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</inlineHelpText>
        <label>Effective Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__IgnoreInstallmentFrequencyFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>Ignore Installment Frequency Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Contact Address object that contains the billing address data. This will be a unique copy of the address information captured when the subscription is checked out.</description>
        <label>Installment Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Subscriptions (Installment Address)</relationshipLabel>
        <relationshipName>CCInstallmentSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentCountRemaining__c</fullName>
        <description>The number of installments left in this subscription.  0 indicates no more installments left.  Null indicates this is not an installment based subscription.</description>
        <label>Installment Count Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentLastDate__c</fullName>
        <description>Last date that payment will be billed for this subscription</description>
        <label>Installment Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentNextDate__c</fullName>
        <description>The date the next time payment will be processed for this subscription</description>
        <label>Installment Next Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentStatus__c</fullName>
        <description>Not currently used</description>
        <label>Installment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LastRecurringFailure__c</fullName>
        <description>Indicates a message why the last recurring process for this subscription failed.</description>
        <label>Last Recurring Failure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Contact Address object that contains subscription shipping address data. This will be a unique copy of the address information captured during checkout.</description>
        <label>Order Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Subscriptions (Order Address)</relationshipLabel>
        <relationshipName>CCOrderSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderCountRemaining__c</fullName>
        <description>The number of orders left in this subscription.  0 indicates no more orders left.  Null indicates this is not an order based subscription.</description>
        <label>Order Count Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderLastDate__c</fullName>
        <description>The date of the last order for this subscription</description>
        <label>Order Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderNextDate__c</fullName>
        <description>The date of the next order for this subscription</description>
        <label>Order Next Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderStatus__c</fullName>
        <description>Not currently used</description>
        <label>Order Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this subscription has a parent subscription, this will point to it</description>
        <label>Parent Subscription</label>
        <referenceTo>ccrz__E_Subscription__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <description>The number of items shipped for this subscriptions</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPriceSubAmt__c</fullName>
        <description>Sub total for the recurring price.  This will be the amount used for installments.</description>
        <label>Recurring Price Sub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPrice__c</fullName>
        <description>Individual unit price for the installment.</description>
        <label>Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTInstallmentCount__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Installment Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTInstallmentFrequencyUOM__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Installment Frequency UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTInstallmentFrequency__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Installment Frequency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTOrderCount__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Order Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTOrderFrequencyUOM__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Order Frequency UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTOrderFrequency__c</fullName>
        <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
        <label>SPT Order Frequency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTRecurringPricePercentage__c</fullName>
        <description>Recurring Price Percentage Field from the original SubProdTerm</description>
        <label>SPT Recurring Price Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPTUpfrontPricePercentage__c</fullName>
        <description>Upfront Price Percentage Field from the original SubProdTerm</description>
        <label>SPT Upfront Price Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SPT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The sub prod term this subscription was ordered from</description>
        <label>SPT</label>
        <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Used for modifiers to determine order in which they are processed.</description>
        <label>Sequence</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__StoredPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The stored payment method for this subscription.</description>
        <label>Stored Payment</label>
        <referenceTo>ccrz__E_StoredPayment__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The storefront to which this subscription belongs.</description>
        <label>Storefront</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubscriptionId__c</fullName>
        <description>The external id of the subscription.  Not functionally used by B2B Commerce but may be used when creating objects within B2B Commerce.</description>
        <externalId>true</externalId>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__SubscriptionProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product that this subscription is for.  When recurring orders are used this is the product that will be ordered.</description>
        <label>Subscription Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Subscriptions</relationshipLabel>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SubscriptionStartDate__c</fullName>
        <description>The start date of the subscription</description>
        <label>Subscription Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__SubscriptionStatus__c</fullName>
        <description>The status of the subscription</description>
        <label>Subscription Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User associated with the subscription</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CCSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Subscription</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SB-{0000000000}</displayFormat>
        <label>CC Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>